          the "org.restlet.engine" package, simplifying the packaging.
        - All engine extensions have been moved to "org.restlet.ext"
          packages.
        - The com.noelios.restlet.ext.spring extension has been merged
          with org.restlet.ext.spring.
    - Enhancements
        - Internal HTTP connector now supports HTTPS connections.
          Contributed by Kevin Conaway.
    - API changes
        - A response with a 200 (Ok) status should have an entity. Now,
          we make sure that a warning is logged. 
          Reported by Rob Heittman.
        - Removed all code deprecated in the Restlet 1.1 release.
        - Added org.restlet.data.Literal to represent RDF
          literals with an optional datatype. 
        - Added org.restlet.data.Link to represent RDF links (aka 
          triples, statements or relationships).
        - Moved o.r.u.Helper class, used privately by API classes to the
          o.r.engine package.
        - Added MediaType constants APPLICATION_RDF_TRIG, 
          APPLICATION_RDF_TRIX, APPLICATION_RDF_TURTLE, 
          APPLICATION_SPARQL_RESULTS_XML and
          APPLICATION_SPARQL_RESULTS_JSON for RDF and SPARQL.
    - Misc
        - JAX-RS extension:
            - added class ExendedUriBuilder with "file" extensions for
              content negotiation and an ExtendedUriInfo to get it.
            - Supports per-request-providers now.
            - JaxRsApplication will not clear the MetadataService (as
              before; was required to not use other extensions as given
              in the JAX-RS ApplicationConfig class).
        - The Directory class doesn't override the findTarget() method
          but uses the defaut Finder mechanism based on the 
          "targetClass" property. Therefore, it is easier to specify a
          subclass of org.restlet.engine.local.DirectoryResource in
          order to customize the default behavior. 
          Suggested by Cliff Binstock.